# scanux

./: LICENSE  README.md  pyproject.toml
src/scanux/: __init__.py  cli.py
src/scanux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scanux/core/: __init__.py  reporter.py  scanner.py  utils.py
src/scanux/modules/: __init__.py  network.py  performance.py  security.py  system.py
